<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/scan_results_recycler_view"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/row_scan_result" />

    <Button
        android:id="@+id/disconnect_button"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        android:enabled="false"
        android:text="@string/disconnect"
        app:layout_constraintBottom_toTopOf="@+id/device_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scan_results_recycler_view"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/refresh_button"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:text="@string/refresh"
        app:layout_constraintBottom_toBottomOf="@+id/disconnect_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/disconnect_button" />

    <TextView
        android:id="@+id/device_label"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:text="@string/device_label"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/status_label"
        app:layout_constraintStart_toStartOf="@+id/status_label" />

    <TextView
        android:id="@+id/device_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_not_connected"
        android:textColor="@color/red"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/device_label"
        app:layout_constraintStart_toEndOf="@+id/device_label" />

    <TextView
        android:id="@+id/status_label"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:text="@string/status_label"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/packet_label"
        app:layout_constraintStart_toStartOf="@+id/packet_label" />

    <TextView
        android:id="@+id/status_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_idle"
        android:textColor="@color/red"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/status_label"
        app:layout_constraintStart_toEndOf="@+id/status_label" />

    <TextView
        android:id="@+id/packet_label"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:text="@string/packet_label"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/time_label"
        app:layout_constraintStart_toStartOf="@+id/time_label" />

    <TextView
        android:id="@+id/packet_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/packet_textview"
        android:textColor="@color/red"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/packet_label"
        app:layout_constraintStart_toEndOf="@+id/status_label" />

    <TextView
        android:id="@+id/time_label"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/time_label"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/scroll"
        app:layout_constraintStart_toStartOf="@+id/scroll" />

    <TextView
        android:id="@+id/time_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_textview"
        android:textColor="@color/red"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/time_label"
        app:layout_constraintStart_toEndOf="@+id/status_label" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="36dp"
        android:text="@string/clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bulk_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bulk"
        app:layout_constraintEnd_toStartOf="@+id/random_button"
        app:layout_constraintStart_toEndOf="@+id/clear_button"
        app:layout_constraintTop_toTopOf="@+id/clear_button" />

    <Button
        android:id="@+id/random_button"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:text="@string/random"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/clear_button" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="24dp"
        android:padding="0dp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        app:layout_constraintBottom_toTopOf="@+id/clear_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:text="@string/empty"
                android:textColor="@color/black" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>